tradPsicoder/gen/PsicoderParser.py
# Generated from C:/Users/a-zam/OneDrive/Documentos/Universidad/Lenguajes de programacion/traductor/TraductorPsicoder/tradPsicoder/grammar\Psicoder.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class PsicoderParser ( Parser ):

    grammarFileName = "Psicoder.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'funcion_principal'", "'fin_principal'", 
                     "'funcion'", "'hacer'", "'fin_funcion'", "'retornar'", 
                     "'estructura'", "'fin_estructura'", "'='", "'si'", 
                     "'entonces'", "'fin_si'", "'si_no'", "'para'", "'fin_para'", 
                     "'entero'", "'mientras'", "'fin_mientras'", "'seleccionar'", 
                     "'entre'", "'fin_seleccionar'", "'defecto'", "':'", 
                     "'caso'", "'leer'", "'imprimir'", "'romper'", "'caracter'", 
                     "'cadena'", "'real'", "'booleano'", "'.'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'!'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "COMMENT", "LINE_COMMENT", "WS", "PIZQ", 
                      "PDER", "NEG", "ROI", "ROP", "ROL", "SMCOLON", "COMA", 
                      "MULOP", "SUMOP", "DOUBLE", "INT", "STRING", "BOOLEANO", 
                      "CONST", "ID" ]

    RULE_s = 0
    RULE_funcion_principal = 1
    RULE_funcion = 2
    RULE_retornar = 3
    RULE_parametros = 4
    RULE_estructura = 5
    RULE_declaracion = 6
    RULE_asignacion = 7
    RULE_comandos = 8
    RULE_comando = 9
    RULE_si = 10
    RULE_si_no = 11
    RULE_para = 12
    RULE_asignacion_entero = 13
    RULE_hacer_mientras = 14
    RULE_mientras = 15
    RULE_seleccionar = 16
    RULE_casos = 17
    RULE_caso = 18
    RULE_asignacion_id = 19
    RULE_leer = 20
    RULE_imprimir = 21
    RULE_romper = 22
    RULE_llamar_funcion = 23
    RULE_pasar_parametros = 24
    RULE_expresion_logica = 25
    RULE_expresion_rop = 26
    RULE_expresion_roi = 27
    RULE_expr = 28
    RULE_tipo = 29
    RULE_id_pos_estruct = 30

    ruleNames =  [ "s", "funcion_principal", "funcion", "retornar", "parametros", 
                   "estructura", "declaracion", "asignacion", "comandos", 
                   "comando", "si", "si_no", "para", "asignacion_entero", 
                   "hacer_mientras", "mientras", "seleccionar", "casos", 
                   "caso", "asignacion_id", "leer", "imprimir", "romper", 
                   "llamar_funcion", "pasar_parametros", "expresion_logica", 
                   "expresion_rop", "expresion_roi", "expr", "tipo", "id_pos_estruct" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    COMMENT=33
    LINE_COMMENT=34
    WS=35
    PIZQ=36
    PDER=37
    NEG=38
    ROI=39
    ROP=40
    ROL=41
    SMCOLON=42
    COMA=43
    MULOP=44
    SUMOP=45
    DOUBLE=46
    INT=47
    STRING=48
    BOOLEANO=49
    CONST=50
    ID=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcion_principal(self):
            return self.getTypedRuleContext(PsicoderParser.Funcion_principalContext,0)


        def EOF(self):
            return self.getToken(PsicoderParser.EOF, 0)

        def funcion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PsicoderParser.FuncionContext)
            else:
                return self.getTypedRuleContext(PsicoderParser.FuncionContext,i)


        def estructura(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PsicoderParser.EstructuraContext)
            else:
                return self.getTypedRuleContext(PsicoderParser.EstructuraContext,i)


        def getRuleIndex(self):
            return PsicoderParser.RULE_s

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS" ):
                listener.enterS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS" ):
                listener.exitS(self)




    def s(self):

        localctx = PsicoderParser.SContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_s)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PsicoderParser.T__2 or _la==PsicoderParser.T__6:
                self.state = 64
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [PsicoderParser.T__2]:
                    self.state = 62
                    self.funcion()
                    pass
                elif token in [PsicoderParser.T__6]:
                    self.state = 63
                    self.estructura()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.funcion_principal()
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PsicoderParser.T__2 or _la==PsicoderParser.T__6:
                self.state = 72
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [PsicoderParser.T__2]:
                    self.state = 70
                    self.funcion()
                    pass
                elif token in [PsicoderParser.T__6]:
                    self.state = 71
                    self.estructura()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 77
            self.match(PsicoderParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Funcion_principalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comandos(self):
            return self.getTypedRuleContext(PsicoderParser.ComandosContext,0)


        def getRuleIndex(self):
            return PsicoderParser.RULE_funcion_principal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncion_principal" ):
                listener.enterFuncion_principal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncion_principal" ):
                listener.exitFuncion_principal(self)




    def funcion_principal(self):

        localctx = PsicoderParser.Funcion_principalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcion_principal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(PsicoderParser.T__0)
            self.state = 80
            self.comandos()
            self.state = 81
            self.match(PsicoderParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(PsicoderParser.TipoContext,0)


        def ID(self):
            return self.getToken(PsicoderParser.ID, 0)

        def PIZQ(self):
            return self.getToken(PsicoderParser.PIZQ, 0)

        def parametros(self):
            return self.getTypedRuleContext(PsicoderParser.ParametrosContext,0)


        def PDER(self):
            return self.getToken(PsicoderParser.PDER, 0)

        def comandos(self):
            return self.getTypedRuleContext(PsicoderParser.ComandosContext,0)


        def retornar(self):
            return self.getTypedRuleContext(PsicoderParser.RetornarContext,0)


        def getRuleIndex(self):
            return PsicoderParser.RULE_funcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncion" ):
                listener.enterFuncion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncion" ):
                listener.exitFuncion(self)




    def funcion(self):

        localctx = PsicoderParser.FuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(PsicoderParser.T__2)
            self.state = 84
            self.tipo()
            self.state = 85
            self.match(PsicoderParser.ID)
            self.state = 86
            self.match(PsicoderParser.PIZQ)
            self.state = 87
            self.parametros()
            self.state = 88
            self.match(PsicoderParser.PDER)
            self.state = 89
            self.match(PsicoderParser.T__3)
            self.state = 90
            self.comandos()
            self.state = 91
            self.retornar()
            self.state = 92
            self.match(PsicoderParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RetornarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PsicoderParser.ExprContext,0)


        def SMCOLON(self):
            return self.getToken(PsicoderParser.SMCOLON, 0)

        def getRuleIndex(self):
            return PsicoderParser.RULE_retornar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRetornar" ):
                listener.enterRetornar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRetornar" ):
                listener.exitRetornar(self)




    def retornar(self):

        localctx = PsicoderParser.RetornarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_retornar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(PsicoderParser.T__5)
            self.state = 95
            self.expr(0)
            self.state = 96
            self.match(PsicoderParser.SMCOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PsicoderParser.TipoContext)
            else:
                return self.getTypedRuleContext(PsicoderParser.TipoContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PsicoderParser.ID)
            else:
                return self.getToken(PsicoderParser.ID, i)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(PsicoderParser.COMA)
            else:
                return self.getToken(PsicoderParser.COMA, i)

        def getRuleIndex(self):
            return PsicoderParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)




    def parametros(self):

        localctx = PsicoderParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PsicoderParser.T__15, PsicoderParser.T__27, PsicoderParser.T__28, PsicoderParser.T__29, PsicoderParser.T__30, PsicoderParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.tipo()
                self.state = 99
                self.match(PsicoderParser.ID)
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==PsicoderParser.COMA:
                    self.state = 100
                    self.match(PsicoderParser.COMA)
                    self.state = 101
                    self.tipo()
                    self.state = 102
                    self.match(PsicoderParser.ID)
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [PsicoderParser.PDER]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstructuraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PsicoderParser.ID, 0)

        def declaracion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PsicoderParser.DeclaracionContext)
            else:
                return self.getTypedRuleContext(PsicoderParser.DeclaracionContext,i)


        def getRuleIndex(self):
            return PsicoderParser.RULE_estructura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstructura" ):
                listener.enterEstructura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstructura" ):
                listener.exitEstructura(self)




    def estructura(self):

        localctx = PsicoderParser.EstructuraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_estructura)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(PsicoderParser.T__6)
            self.state = 113
            self.match(PsicoderParser.ID)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PsicoderParser.T__15) | (1 << PsicoderParser.T__27) | (1 << PsicoderParser.T__28) | (1 << PsicoderParser.T__29) | (1 << PsicoderParser.T__30) | (1 << PsicoderParser.ID))) != 0):
                self.state = 114
                self.declaracion()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self.match(PsicoderParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(PsicoderParser.TipoContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PsicoderParser.ID)
            else:
                return self.getToken(PsicoderParser.ID, i)

        def asignacion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PsicoderParser.AsignacionContext)
            else:
                return self.getTypedRuleContext(PsicoderParser.AsignacionContext,i)


        def SMCOLON(self):
            return self.getToken(PsicoderParser.SMCOLON, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(PsicoderParser.COMA)
            else:
                return self.getToken(PsicoderParser.COMA, i)

        def getRuleIndex(self):
            return PsicoderParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)




    def declaracion(self):

        localctx = PsicoderParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declaracion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.tipo()
            self.state = 123
            self.match(PsicoderParser.ID)
            self.state = 124
            self.asignacion()
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PsicoderParser.COMA:
                self.state = 125
                self.match(PsicoderParser.COMA)
                self.state = 126
                self.match(PsicoderParser.ID)
                self.state = 127
                self.asignacion()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 133
            self.match(PsicoderParser.SMCOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PsicoderParser.ExprContext,0)


        def getRuleIndex(self):
            return PsicoderParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = PsicoderParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_asignacion)
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PsicoderParser.T__8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.match(PsicoderParser.T__8)
                self.state = 136
                self.expr(0)
                pass
            elif token in [PsicoderParser.SMCOLON, PsicoderParser.COMA]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self):
            return self.getTypedRuleContext(PsicoderParser.ComandoContext,0)


        def comandos(self):
            return self.getTypedRuleContext(PsicoderParser.ComandosContext,0)


        def getRuleIndex(self):
            return PsicoderParser.RULE_comandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandos" ):
                listener.enterComandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandos" ):
                listener.exitComandos(self)




    def comandos(self):

        localctx = PsicoderParser.ComandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_comandos)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.comando()
                self.state = 141
                self.comandos()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def si(self):
            return self.getTypedRuleContext(PsicoderParser.SiContext,0)


        def para(self):
            return self.getTypedRuleContext(PsicoderParser.ParaContext,0)


        def mientras(self):
            return self.getTypedRuleContext(PsicoderParser.MientrasContext,0)


        def hacer_mientras(self):
            return self.getTypedRuleContext(PsicoderParser.Hacer_mientrasContext,0)


        def seleccionar(self):
            return self.getTypedRuleContext(PsicoderParser.SeleccionarContext,0)


        def declaracion(self):
            return self.getTypedRuleContext(PsicoderParser.DeclaracionContext,0)


        def asignacion_id(self):
            return self.getTypedRuleContext(PsicoderParser.Asignacion_idContext,0)


        def leer(self):
            return self.getTypedRuleContext(PsicoderParser.LeerContext,0)


        def imprimir(self):
            return self.getTypedRuleContext(PsicoderParser.ImprimirContext,0)


        def llamar_funcion(self):
            return self.getTypedRuleContext(PsicoderParser.Llamar_funcionContext,0)


        def getRuleIndex(self):
            return PsicoderParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)




    def comando(self):

        localctx = PsicoderParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comando)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.si()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.para()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.mientras()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 149
                self.hacer_mientras()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 150
                self.seleccionar()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 151
                self.declaracion()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 152
                self.asignacion_id()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 153
                self.leer()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 154
                self.imprimir()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 155
                self.llamar_funcion()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PIZQ(self):
            return self.getToken(PsicoderParser.PIZQ, 0)

        def expresion_logica(self):
            return self.getTypedRuleContext(PsicoderParser.Expresion_logicaContext,0)


        def PDER(self):
            return self.getToken(PsicoderParser.PDER, 0)

        def comandos(self):
            return self.getTypedRuleContext(PsicoderParser.ComandosContext,0)


        def si_no(self):
            return self.getTypedRuleContext(PsicoderParser.Si_noContext,0)


        def getRuleIndex(self):
            return PsicoderParser.RULE_si

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSi" ):
                listener.enterSi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSi" ):
                listener.exitSi(self)




    def si(self):

        localctx = PsicoderParser.SiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_si)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(PsicoderParser.T__9)
            self.state = 159
            self.match(PsicoderParser.PIZQ)
            self.state = 160
            self.expresion_logica(0)
            self.state = 161
            self.match(PsicoderParser.PDER)
            self.state = 162
            self.match(PsicoderParser.T__10)
            self.state = 163
            self.comandos()
            self.state = 164
            self.si_no()
            self.state = 165
            self.match(PsicoderParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Si_noContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comandos(self):
            return self.getTypedRuleContext(PsicoderParser.ComandosContext,0)


        def getRuleIndex(self):
            return PsicoderParser.RULE_si_no

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSi_no" ):
                listener.enterSi_no(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSi_no" ):
                listener.exitSi_no(self)




    def si_no(self):

        localctx = PsicoderParser.Si_noContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_si_no)
        try:
            self.state = 170
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PsicoderParser.T__12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.match(PsicoderParser.T__12)
                self.state = 168
                self.comandos()
                pass
            elif token in [PsicoderParser.T__11]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PIZQ(self):
            return self.getToken(PsicoderParser.PIZQ, 0)

        def SMCOLON(self, i:int=None):
            if i is None:
                return self.getTokens(PsicoderParser.SMCOLON)
            else:
                return self.getToken(PsicoderParser.SMCOLON, i)

        def expresion_rop(self):
            return self.getTypedRuleContext(PsicoderParser.Expresion_ropContext,0)


        def asignacion_id(self):
            return self.getTypedRuleContext(PsicoderParser.Asignacion_idContext,0)


        def PDER(self):
            return self.getToken(PsicoderParser.PDER, 0)

        def comandos(self):
            return self.getTypedRuleContext(PsicoderParser.ComandosContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(PsicoderParser.AsignacionContext,0)


        def asignacion_entero(self):
            return self.getTypedRuleContext(PsicoderParser.Asignacion_enteroContext,0)


        def getRuleIndex(self):
            return PsicoderParser.RULE_para

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPara" ):
                listener.enterPara(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPara" ):
                listener.exitPara(self)




    def para(self):

        localctx = PsicoderParser.ParaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_para)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(PsicoderParser.T__13)
            self.state = 173
            self.match(PsicoderParser.PIZQ)
            self.state = 176
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PsicoderParser.T__8, PsicoderParser.SMCOLON]:
                self.state = 174
                self.asignacion()
                pass
            elif token in [PsicoderParser.T__15]:
                self.state = 175
                self.asignacion_entero()
                pass
            else:
                raise NoViableAltException(self)
